testsuite/tests/typecheck/should_fail/tcfail154.stderr

tcfail154.hs:13:10: error:
    • The constraint ‘C a a’
        is no smaller than the instance head ‘Eq (T a)’
      (Use UndecidableInstances to permit this)
    • In the instance declaration for ‘Eq (T a)’
